Increase width of the container to fix paragraph
The paragraph was too large and was pushing the text boxes off screen, so I increased the width of the container.

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
 }
 
 .container{
-  width:500px; 
+  width:1500px; 
   margin:auto;
 }
 
